--- a/ЛР3/task314.html
+++ b/ЛР3/task314.html
@@ -10,7 +10,7 @@
             ++x;
             alert(x);
         }
-        if (x>=5) {alert('Если это задание 3.5.4, то вы забыли выполнить его условие.')};
+        if (x>5) {alert('Если это задание 3.5.4, то вы забыли выполнить его условие.')};
     </script>
 
 </head>
