--- a/ЛР3/game.html
+++ b/ЛР3/game.html
@@ -5,27 +5,21 @@
   <title>Змейка!</title>
 </head>
 <body>
-
 <canvas id="canvas" width="400" height="400"></canvas>
 <script src="https://code.jquery.com/jquery-2.1.0.js"></script>
 <script>
-
   // Настройка «холста»
   var canvas = document.getElementById("canvas");
   var ctx = canvas.getContext("2d");
-
   // Получаем ширину и высоту элемента canvas
   var width = canvas.width;
   var height = canvas.height;
-
   // Вычисляем ширину и высоту в ячейках
   var blockSize = 10;
   var widthInBlocks = width / blockSize;
   var heightInBlocks = height / blockSize;
-
   // Устанавливаем счет 0
   var score = 0;
-
   // Рисуем рамку
   var drawBorder = function () {
     ctx.fillStyle = "Gray";
@@ -34,7 +28,6 @@
     ctx.fillRect(0, 0, blockSize, height);
     ctx.fillRect(width - blockSize, 0, blockSize, height);
   };
-
   // Выводим счет игры в левом верхнем углу
   var drawScore = function () {
     ctx.font = "20px Courier";
@@ -43,7 +36,6 @@
     ctx.textBaseline = "top";
     ctx.fillText("Счет: " + score, blockSize, blockSize);
   };
-
   // Отменяем действие setInterval и печатаем сообщение «Конец игры»
   var gameOver = function () {
     clearInterval(intervalId);
@@ -53,8 +45,7 @@
     ctx.textBaseline = "middle";
     ctx.fillText("Конец игры", width / 2, height / 2);
   };
-
-  // Рисуем окружность (используя функцию из главы 14)
+  // Рисуем окружность
   var circle = function (x, y, radius, fillCircle) {
     ctx.beginPath();
     ctx.arc(x, y, radius, 0, Math.PI * 2, false);
@@ -64,13 +55,11 @@
       ctx.stroke();
     }
   };
-
   // Задаем конструктор Block (ячейка)
   var Block = function (col, row) {
     this.col = col;
     this.row = row;
   };
-
   // Рисуем квадрат в позиции ячейки
   Block.prototype.drawSquare = function (color) {
     var x = this.col * blockSize;
@@ -78,7 +67,6 @@
     ctx.fillStyle = color;
     ctx.fillRect(x, y, blockSize, blockSize);
   };
-
   // Рисуем круг в позиции ячейки
   Block.prototype.drawCircle = function (color) {
     var centerX = this.col * blockSize + blockSize / 2;
@@ -86,13 +74,11 @@
     ctx.fillStyle = color;
     circle(centerX, centerY, blockSize / 2, true);
   };
-
   // Проверяем, находится ли эта ячейка в той же позиции, что и ячейка
   // otherBlock
   Block.prototype.equal = function (otherBlock) {
     return this.col === otherBlock.col && this.row === otherBlock.row;
   };
-
   // Задаем конструктор Snake (змейка)
   var Snake = function () {
     this.segments = [
@@ -100,26 +86,21 @@
       new Block(6, 5),
       new Block(5, 5)
     ];
-
     this.direction = "right";
     this.nextDirection = "right";
   };
-
   // Рисуем квадратик для каждого сегмента тела змейки
   Snake.prototype.draw = function () {
     for (var i = 0; i < this.segments.length; i++) {
       this.segments[i].drawSquare("Blue");
     }
   };
-
   // Создаем новую голову и добавляем ее к началу змейки,
   // чтобы передвинуть змейку в текущем направлении
   Snake.prototype.move = function () {
     var head = this.segments[0];
     var newHead;
-
     this.direction = this.nextDirection;
-
     if (this.direction === "right") {
       newHead = new Block(head.col + 1, head.row);
     } else if (this.direction === "down") {
@@ -129,7 +110,6 @@
     } else if (this.direction === "up") {
       newHead = new Block(head.col, head.row - 1);
     }
-
     if (this.checkCollision(newHead)) {
       gameOver();
       return;
@@ -142,7 +122,6 @@
       this.segments.pop();
     }
   };
-
   // Проверяем, не столкнулась ли змейка со стеной или собственным
   // телом
   Snake.prototype.checkCollision = function (head) {
@@ -153,16 +132,13 @@
     var wallCollision = leftCollision || topCollision || rightCollision || bottomCollision;
 
     var selfCollision = false;
-
     for (var i = 0; i < this.segments.length; i++) {
       if (head.equal(this.segments[i])) {
         selfCollision = true;
       }
     }
-
     return wallCollision || selfCollision;
   };
-
   // Задаем следующее направление движения змейки на основе нажатой
   // клавиши
   Snake.prototype.setDirection = function (newDirection) {
@@ -175,31 +151,25 @@
     } else if (this.direction === "left" && newDirection === "right") {
       return;
     }
-
     this.nextDirection = newDirection;
   };
-
   // Задаем конструктор Apple (яблоко)
   var Apple = function () {
     this.position = new Block(10, 10);
   };
-
   // Рисуем кружок в позиции яблока
   Apple.prototype.draw = function () {
     this.position.drawCircle("LimeGreen");
   };
-
   // Перемещаем яблоко в случайную позицию
   Apple.prototype.move = function () {
     var randomCol = Math.floor(Math.random() * (widthInBlocks - 2)) + 1;
     var randomRow = Math.floor(Math.random() * (heightInBlocks - 2)) + 1;
     this.position = new Block(randomCol, randomRow);
   };
-
   // Создаем объект-змейку и объект-яблоко
   var snake = new Snake();
   var apple = new Apple();
-
   // Запускаем функцию анимации через setInterval
   var intervalId = setInterval(function () {
     ctx.clearRect(0, 0, width, height);
@@ -209,7 +179,6 @@
     apple.draw();
     drawBorder();
   }, 100);
-
   // Преобразуем коды клавиш в направления
   var directions = {
     37: "left",
@@ -217,7 +186,6 @@
     39: "right",
     40: "down"
   };
-
   // Задаем обработчик события keydown (клавиши-стрелки)
   $("body").keydown(function (event) {
     var newDirection = directions[event.keyCode];
@@ -225,8 +193,6 @@
       snake.setDirection(newDirection);
     }
   });
-
-
 </script>
 </body>
 </html>
