--- a/ЛР3/task318.html
+++ b/ЛР3/task318.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <script language="JavaScript">
         var breakat;
-        breakat = prompt("Введите число для прерывания цикла от 1 до 10-ти ", "");
+        breakat = parseInt(prompt("Введите число для прерывания цикла от 1 до 10-ти ", "")) ;
         for (let x = 0; x < 10; x++)
         {
             if (x === breakat)
@@ -18,6 +18,5 @@
     </script>
 </head>
 <body>
-
 </body>
 </html>
