Updated game and animation

--- a/ЛР3/animation/index.html
+++ b/ЛР3/animation/index.html
@@ -5,81 +5,82 @@
     <meta charset="UTF-8">
     <title>352</title>
     <link rel="stylesheet" href="style.css">
-    <script>
-        const oSpace = document.getElementById("space");
-        const oEarth = document.getElementById("earthId");
-
-        let iEarthInterval = 20;
-        let iMoonInterval = 10;
-        let earthID = 10;
-        let moonID = 10;
-
-        let iEarthAngle;
-        let iEarthRadius;
-        let iEarthXBegin;
-        let iEarthYBegin;
-
-        let iMoonAngle;
-        let iMoonRadius;
-        let iMoonXBegin;
-        let iMoonYBegin;
-
-        function startMovement() {
-            moveEarth();
-            moveMoon();
-        }
-
-        function moveEarth() {
-            iEarthAngle = 0;
-            iEarthRadius = 250;
-            iEarthXBegin = oSpace.offsetWidth / 2.2;
-            iEarthYBegin = oSpace.offsetHeight / 2;
-
-            earthID = setInterval(rotateEarth, iEarthInterval);
-            if (iEarthInterval > 0) {
-                iEarthInterval -= 5;
-            }
-        }
-
-        function rotateEarth() {
-            let iRad = iEarthAngle * Math.PI / 180;
-            oEarth.style.left = (iEarthXBegin + iEarthRadius * Math.sin(iRad)) + 'px';
-            oEarth.style.top = (iEarthYBegin - iEarthRadius * Math.cos(iRad)) + 'px';
-            iEarthAngle += 1;
-            if (iEarthAngle >= 360) iEarthAngle = 0;
-        }
-
-        function moveMoon() {
-            iMoonAngle = 0;
-            iMoonRadius = 100;
-            iMoonXBegin = oEarth.offsetWidth / 2;
-            iMoonYBegin = oEarth.offsetHeight / 2;
-
-            moonID = setInterval(rotateMoon, iMoonInterval);
-            if (iMoonInterval > 0) {
-                iMoonInterval -= 5;
-            }
-        }
-
-        function rotateMoon() {
-            let iRad = iMoonAngle * Math.PI / 180;
-            const oEarth = document.getElementById("moonId");
-            oEarth.style.left = (iMoonXBegin + iMoonRadius * Math.sin(iRad)) + 'px';
-            oEarth.style.top = (iMoonYBegin - iMoonRadius * Math.cos(iRad)) + 'px';
-            iMoonAngle += 1;
-            if (iMoonAngle >= 360) iMoonAngle = 0;
-        }
-    </script>
 </head>
 
 <body onload="startMovement()">
-<div id="space">
+<div class="space" id="space">
     <img src="images1/sun.png" class="sun">
     <div name="earth" id="earthId" class="earth-div">
         <img src="images1/earth.png" class="earth-planet">
         <img src="images1/moon.png" name="moon" id="moonId" class="moon-planet">
     </div>
 </div>
+<script>
+    const oSpace = document.getElementById("space");
+    const oEarth = document.getElementById("earthId");
+
+    let iEarthInterval = 20;
+    let iMoonInterval = 10;
+    let earthID = 10;
+    let moonID = 10;
+
+    let iEarthAngle;
+    let iEarthRadius;
+    let iEarthXBegin;
+    let iEarthYBegin;
+
+    let iMoonAngle;
+    let iMoonRadius;
+    let iMoonXBegin;
+    let iMoonYBegin;
+
+    function startMovement() {
+        moveEarth();
+        moveMoon();
+    }
+
+    function moveEarth() {
+        iEarthAngle = 0;
+        iEarthRadius = 250;
+        iEarthXBegin = oSpace.offsetWidth / 2.2;
+        iEarthYBegin = oSpace.offsetHeight / 2;
+
+        earthID = setInterval(rotateEarth, iEarthInterval);
+        if (iEarthInterval > 0) {
+            iEarthInterval -= 5;
+        }
+    }
+
+    function rotateEarth() {
+        let iRad = iEarthAngle * Math.PI / 180;
+        oEarth.style.left = (iEarthXBegin + iEarthRadius * Math.sin(iRad)) + 'px';
+        oEarth.style.top = (iEarthYBegin - iEarthRadius * Math.cos(iRad)) + 'px';
+        iEarthAngle += 1;
+        if (iEarthAngle >= 360) iEarthAngle = 0;
+    }
+
+    function moveMoon() {
+        iMoonAngle = 0;
+        iMoonRadius = 100;
+        iMoonXBegin = oEarth.offsetWidth / 2;
+        iMoonYBegin = oEarth.offsetHeight / 2;
+
+        moonID = setInterval(rotateMoon, iMoonInterval);
+        if (iMoonInterval > 0) {
+            iMoonInterval -= 5;
+        }
+    }
+
+    function rotateMoon() {
+        let iRad = iMoonAngle * Math.PI / 180;
+        const oEarth = document.getElementById("moonId");
+        oEarth.style.left = (iMoonXBegin + iMoonRadius * Math.sin(iRad)) + 'px';
+        oEarth.style.top = (iMoonYBegin - iMoonRadius * Math.cos(iRad)) + 'px';
+        iMoonAngle += 1;
+        if (iMoonAngle >= 360) iMoonAngle = 0;
+    }
+</script>
+
 </body>
 
 </html>
