--- a/ЛР3/game.html
+++ b/ЛР3/game.html
@@ -1,198 +1,167 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Змейка!</title>
-</head>
-<body>
-<canvas id="canvas" width="400" height="400"></canvas>
-<script src="https://code.jquery.com/jquery-2.1.0.js"></script>
-<script>
-  // Настройка «холста»
-  var canvas = document.getElementById("canvas");
-  var ctx = canvas.getContext("2d");
-  // Получаем ширину и высоту элемента canvas
-  var width = canvas.width;
-  var height = canvas.height;
-  // Вычисляем ширину и высоту в ячейках
-  var blockSize = 10;
-  var widthInBlocks = width / blockSize;
-  var heightInBlocks = height / blockSize;
-  // Устанавливаем счет 0
-  var score = 0;
-  // Рисуем рамку
-  var drawBorder = function () {
-    ctx.fillStyle = "Gray";
-    ctx.fillRect(0, 0, width, blockSize);
-    ctx.fillRect(0, height - blockSize, width, blockSize);
-    ctx.fillRect(0, 0, blockSize, height);
-    ctx.fillRect(width - blockSize, 0, blockSize, height);
-  };
-  // Выводим счет игры в левом верхнем углу
-  var drawScore = function () {
-    ctx.font = "20px Courier";
-    ctx.fillStyle = "Black";
-    ctx.textAlign = "left";
-    ctx.textBaseline = "top";
-    ctx.fillText("Счет: " + score, blockSize, blockSize);
-  };
-  // Отменяем действие setInterval и печатаем сообщение «Конец игры»
-  var gameOver = function () {
-    clearInterval(intervalId);
-    ctx.font = "60px Courier";
-    ctx.fillStyle = "Black";
-    ctx.textAlign = "center";
-    ctx.textBaseline = "middle";
-    ctx.fillText("Конец игры", width / 2, height / 2);
-  };
-  // Рисуем окружность
-  var circle = function (x, y, radius, fillCircle) {
-    ctx.beginPath();
-    ctx.arc(x, y, radius, 0, Math.PI * 2, false);
-    if (fillCircle) {
-      ctx.fill();
-    } else {
-      ctx.stroke();
+  <title>Змейка</title>
+  <style>
+    html,
+    body {
+      height: 100%;
+      margin: 0;
     }
-  };
-  // Задаем конструктор Block (ячейка)
-  var Block = function (col, row) {
-    this.col = col;
-    this.row = row;
-  };
-  // Рисуем квадрат в позиции ячейки
-  Block.prototype.drawSquare = function (color) {
-    var x = this.col * blockSize;
-    var y = this.row * blockSize;
-    ctx.fillStyle = color;
-    ctx.fillRect(x, y, blockSize, blockSize);
-  };
-  // Рисуем круг в позиции ячейки
-  Block.prototype.drawCircle = function (color) {
-    var centerX = this.col * blockSize + blockSize / 2;
-    var centerY = this.row * blockSize + blockSize / 2;
-    ctx.fillStyle = color;
-    circle(centerX, centerY, blockSize / 2, true);
-  };
-  // Проверяем, находится ли эта ячейка в той же позиции, что и ячейка
-  // otherBlock
-  Block.prototype.equal = function (otherBlock) {
-    return this.col === otherBlock.col && this.row === otherBlock.row;
-  };
-  // Задаем конструктор Snake (змейка)
-  var Snake = function () {
-    this.segments = [
-      new Block(7, 5),
-      new Block(6, 5),
-      new Block(5, 5)
-    ];
-    this.direction = "right";
-    this.nextDirection = "right";
-  };
-  // Рисуем квадратик для каждого сегмента тела змейки
-  Snake.prototype.draw = function () {
-    for (var i = 0; i < this.segments.length; i++) {
-      this.segments[i].drawSquare("Blue");
-    }
-  };
-  // Создаем новую голову и добавляем ее к началу змейки,
-  // чтобы передвинуть змейку в текущем направлении
-  Snake.prototype.move = function () {
-    var head = this.segments[0];
-    var newHead;
-    this.direction = this.nextDirection;
-    if (this.direction === "right") {
-      newHead = new Block(head.col + 1, head.row);
-    } else if (this.direction === "down") {
-      newHead = new Block(head.col, head.row + 1);
-    } else if (this.direction === "left") {
-      newHead = new Block(head.col - 1, head.row);
-    } else if (this.direction === "up") {
-      newHead = new Block(head.col, head.row - 1);
-    }
-    if (this.checkCollision(newHead)) {
-      gameOver();
-      return;
-    }
-    this.segments.unshift(newHead);
-    if (newHead.equal(apple.position)) {
-      score++;
-      apple.move();
-    } else {
-      this.segments.pop();
-    }
-  };
-  // Проверяем, не столкнулась ли змейка со стеной или собственным
-  // телом
-  Snake.prototype.checkCollision = function (head) {
-    var leftCollision = (head.col === 0);
-    var topCollision = (head.row === 0);
-    var rightCollision = (head.col === widthInBlocks - 1);
-    var bottomCollision = (head.row === heightInBlocks - 1);
-    var wallCollision = leftCollision || topCollision || rightCollision || bottomCollision;
 
-    var selfCollision = false;
-    for (var i = 0; i < this.segments.length; i++) {
-      if (head.equal(this.segments[i])) {
-        selfCollision = true;
+    /*Задаём глобальные параметры*/
+    body {
+      background: black;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    /*Делаем границу вокруг игрового поля*/
+    canvas {
+      border: 1px solid white;
+    }
+  </style>
+</head>
+
+<body>
+<!-- Рисуем игровое поле -->
+<canvas width="400" height="400" id="game"></canvas>
+<!-- Сам скрипт с игрой -->
+<script>
+  // Поле, на котором всё будет происходить, — тоже как бы переменная
+  var canvas = document.getElementById('game');
+  // Классическая змейка — двухмерная, сделаем такую же
+  var context = canvas.getContext('2d');
+  // Размер одной клеточки на поле — 16 пикселей
+  var grid = 16;
+  // Служебная переменная, которая отвечает за скорость змейки
+  var count = 0;
+  // А вот и сама змейка
+  var snake = {
+    // Начальные координаты
+    x: 160,
+    y: 160,
+    // Скорость змейки — в каждом новом кадре змейка смещается по оси Х или У. На старте будет двигаться горизонтально, поэтому скорость по игреку равна нулю.
+    dx: grid,
+    dy: 0,
+    // Тащим за собой хвост, который пока пустой
+    cells: [],
+    // Стартовая длина змейки — 4 клеточки
+    maxCells: 4
+  };
+  // А это — еда. Представим, что это красные яблоки.
+  var apple = {
+    // Начальные координаты яблока
+    x: 320,
+    y: 320
+  };
+  // Делаем генератор случайных чисел в заданном диапазоне
+  function getRandomInt(min, max) {
+    return Math.floor(Math.random() * (max - min)) + min;
+  }
+  // Игровой цикл — основной процесс, внутри которого будет всё происходить
+  function loop() {
+    // Хитрая функция, которая замедляет скорость игры с 60 кадров в секунду до 15 (60/15 = 4)
+    requestAnimationFrame(loop);
+    // Игровой код выполнится только один раз из четырёх, в этом и суть замедления кадров, а пока переменная count меньше четырёх, код выполняться не будет
+    if (++count < 4) {
+      return;
+    }
+    // Обнуляем переменную скорости
+    count = 0;
+    // Очищаем игровое поле
+    context.clearRect(0, 0, canvas.width, canvas.height);
+    // Двигаем змейку с нужной скоростью
+    snake.x += snake.dx;
+    snake.y += snake.dy;
+    // Если змейка достигла края поля по горизонтали — продолжаем её движение с противоположной строны
+    if (snake.x < 0) {
+      snake.x = canvas.width - grid;
+    }
+    else if (snake.x >= canvas.width) {
+      snake.x = 0;
+    }
+    // Делаем то же самое для движения по вертикали
+    if (snake.y < 0) {
+      snake.y = canvas.height - grid;
+    }
+    else if (snake.y >= canvas.height) {
+      snake.y = 0;
+    }
+    // Продолжаем двигаться в выбранном направлении. Голова всегда впереди, поэтому добавляем её координаты в начало массива, который отвечает за всю змейку
+    snake.cells.unshift({ x: snake.x, y: snake.y });
+    // Сразу после этого удаляем последний элемент из массива змейки, потому что она движется и постоянно освобождает клетки после себя
+    if (snake.cells.length > snake.maxCells) {
+      snake.cells.pop();
+    }
+    // Рисуем еду — красное яблоко
+    context.fillStyle = 'red';
+    context.fillRect(apple.x, apple.y, grid - 1, grid - 1);
+    // Одно движение змейки — один новый нарисованный квадратик
+    context.fillStyle = 'green';
+    // Обрабатываем каждый элемент змейки
+    snake.cells.forEach(function (cell, index) {
+      // Чтобы создать эффект клеточек, делаем зелёные квадратики меньше на один пиксель, чтобы вокруг них образовалась чёрная граница
+      context.fillRect(cell.x, cell.y, grid - 1, grid - 1);
+      // Если змейка добралась до яблока...
+      if (cell.x === apple.x && cell.y === apple.y) {
+        // увеличиваем длину змейки
+        snake.maxCells++;
+        // Рисуем новое яблочко
+        // Помним, что размер холста у нас 400x400, при этом он разбит на ячейки — 25 в каждую сторону
+        apple.x = getRandomInt(0, 25) * grid;
+        apple.y = getRandomInt(0, 25) * grid;
       }
+      // Проверяем, не столкнулась ли змея сама с собой
+      // Для этого перебираем весь массив и смотрим, есть ли у нас в массиве змейки две клетки с одинаковыми координатами
+      for (var i = index + 1; i < snake.cells.length; i++) {
+        // Если такие клетки есть — начинаем игру заново
+        if (cell.x === snake.cells[i].x && cell.y === snake.cells[i].y) {
+          // Задаём стартовые параметры основным переменным
+          snake.x = 160;
+          snake.y = 160;
+          snake.cells = [];
+          snake.maxCells = 4;
+          snake.dx = grid;
+          snake.dy = 0;
+          // Ставим яблочко в случайное место
+          apple.x = getRandomInt(0, 25) * grid;
+          apple.y = getRandomInt(0, 25) * grid;
+        }
+      }
+    });
+  }
+  // Смотрим, какие нажимаются клавиши, и реагируем на них нужным образом
+  document.addEventListener('keydown', function (e) {
+    // Дополнительно проверяем такой момент: если змейка движется, например, влево, то ещё одно нажатие влево или вправо ничего не поменяет — змейка продолжит двигаться в ту же сторону, что и раньше. Это сделано для того, чтобы не разворачивать весь массив со змейкой на лету и не усложнять код игры.
+    // Стрелка влево
+    // Если нажата стрелка влево, и при этом змейка никуда не движется по горизонтали…
+    if (e.which === 37 && snake.dx === 0) {
+      // то даём ей движение по горизонтали, влево, а вертикальное — останавливаем
+      // Та же самая логика будет и в остальных кнопках
+      snake.dx = -grid;
+      snake.dy = 0;
     }
-    return wallCollision || selfCollision;
-  };
-  // Задаем следующее направление движения змейки на основе нажатой
-  // клавиши
-  Snake.prototype.setDirection = function (newDirection) {
-    if (this.direction === "up" && newDirection === "down") {
-      return;
-    } else if (this.direction === "right" && newDirection === "left") {
-      return;
-    } else if (this.direction === "down" && newDirection === "up") {
-      return;
-    } else if (this.direction === "left" && newDirection === "right") {
-      return;
+    // Стрелка вверх
+    else if (e.which === 38 && snake.dy === 0) {
+      snake.dy = -grid;
+      snake.dx = 0;
     }
-    this.nextDirection = newDirection;
-  };
-  // Задаем конструктор Apple (яблоко)
-  var Apple = function () {
-    this.position = new Block(10, 10);
-  };
-  // Рисуем кружок в позиции яблока
-  Apple.prototype.draw = function () {
-    this.position.drawCircle("LimeGreen");
-  };
-  // Перемещаем яблоко в случайную позицию
-  Apple.prototype.move = function () {
-    var randomCol = Math.floor(Math.random() * (widthInBlocks - 2)) + 1;
-    var randomRow = Math.floor(Math.random() * (heightInBlocks - 2)) + 1;
-    this.position = new Block(randomCol, randomRow);
-  };
-  // Создаем объект-змейку и объект-яблоко
-  var snake = new Snake();
-  var apple = new Apple();
-  // Запускаем функцию анимации через setInterval
-  var intervalId = setInterval(function () {
-    ctx.clearRect(0, 0, width, height);
-    drawScore();
-    snake.move();
-    snake.draw();
-    apple.draw();
-    drawBorder();
-  }, 100);
-  // Преобразуем коды клавиш в направления
-  var directions = {
-    37: "left",
-    38: "up",
-    39: "right",
-    40: "down"
-  };
-  // Задаем обработчик события keydown (клавиши-стрелки)
-  $("body").keydown(function (event) {
-    var newDirection = directions[event.keyCode];
-    if (newDirection !== undefined) {
-      snake.setDirection(newDirection);
+    // Стрелка вправо
+    else if (e.which === 39 && snake.dx === 0) {
+      snake.dx = grid;
+      snake.dy = 0;
+    }
+    // Стрелка вниз
+    else if (e.which === 40 && snake.dy === 0) {
+      snake.dy = grid;
+      snake.dx = 0;
     }
   });
+  // Запускаем игру
+  requestAnimationFrame(loop);
 </script>
 </body>
+
 </html>
